<resources>
    <string name="app_name">Databits Map</string>
    <string name="clear">Clear</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="settings">Settings</string>
    <string name="choose_image">Choose Image</string>
    <string name="choose_image_title">Select your own custom background image</string>
  <string name="back">Back</string>
  <string name="back_title">Go back to map</string>
  <string name="remove_cache_button">Remove custom background image</string>
  <string name="remove_cache_title">Return to 2019 FRC background</string>
</resources>
